// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redux Counter Actions decrements the count 1`] = `
Object {
  "count": -2,
}
`;

exports[`redux Counter Actions increments the count 1`] = `
Object {
  "count": 2,
}
`;
